--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@types/sqlite3": "^3.1.6",
+    "node-pre-gyp": "^0.14.0",
+    "sqlite3": "^4.2.0"
+  }
 }
