--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "private": true,
   "dependencies": {
+    "@types/js-yaml": "^3.12.3",
     "@types/sqlite3": "^3.1.6",
+    "js-yaml": "^3.13.1",
     "sqlite3": "^4.2.0"
   }
 }
